[package]
name = "reprove"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
risc0-zkvm = { version = "1.0.5", features = ["prove"] }
risc0-zkp = { version = "1.0.5", features = ["prove"] }
risc0-circuit-recursion = "1.0.5"
bincode = "1.3.3"
anyhow = "1.0.86"
tracing = "0.1.40"
rand = "0.8.5"

